--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active"><a href="index.html" class="nav-link">Home</a></li>
             <li class="nav-item"><a href="services.html" class="nav-link">What We Do</a></li>
-            <li class="nav-item"><a href="blog.html" class="nav-link">The Journal</a></li>
+            <!--<li class="nav-item"><a href="blog.html" class="nav-link">The Journal</a></li>-->
             <li class="nav-item"><a href="about.html" class="nav-link">Who We Are</a></li>
-            <li class="nav-item"><a href="pricing.html" class="nav-link">FAQ</a></li>
+            <li class="nav-item"><a href="faw.html" class="nav-link">FAQ</a></li>
             <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
           </ul>
         </div>
@@ -53,7 +53,7 @@
         <div class="row align-items-center ftco-vh-100">
           <div class="col-md-7">
             <h1 class="ftco-heading mb-3" data-aos="fade-up" data-aos-delay="500">Help us improve the wellbeing of your students.</h1>
-            <h2 class="h5 ftco-subheading mb-5" data-aos="fade-up"  data-aos-delay="600">[Insert our "what"] <strong>WellBean</strong> is a service which brings wellbeing and transition workshops to Year 6 students, equipping the youth of today with the necessary knowledge and skills to make the most out of high school and beyond.</h2>
+            <h2 class="h5 ftco-subheading mb-5" data-aos="fade-up"  data-aos-delay="600"><strong>WellBean</strong> is a service which brings wellbeing and transition workshops to Year 6 students, equipping the youth of today with the necessary knowledge and skills to make the most out of high school and beyond.</h2>
             <p data-aos="fade-up"  data-aos-delay="700"><a href="contact.html" target="_blank" class="btn btn-outline-white px-4 py-3" data-target="#reservationModal">Get in touch with us!</a></p>
           </div>
         </div>
@@ -77,7 +77,7 @@
       <div class="container-fluid">
         <div class="section-2-blocks-wrapper row no-gutters">
           <div class="img col-sm-12 col-md-5" style="background-image: url('images/image_4.jpg');" data-aos="fade-right">
-            <a href="https://vimeo.com/45830194" class="button popup-vimeo" data-aos="fade-right" data-aos-delay="700"><span class="ion-ios-play"></span></a>
+            <!--<a href="https://vimeo.com/45830194" class="button popup-vimeo" data-aos="fade-right" data-aos-delay="700"><span class="ion-ios-play"></span></a>-->
           </div>
           <div class="text col-md-6 col-lg-7 d-flex">
             <div class="text-inner align-self-center" data-aos="fade-up">
@@ -217,7 +217,7 @@
       <div class="row">
         <div class="col-md-6 col-lg-4" data-aos="fade-up">
           <div class="media block-6">
-            <div class="icon"><span class="flaticon-bank bg-after"></span></div>
+            <div class="icon"><span class="flaticon-school bg-after"></span></div>
             <div class="media-body">
               <h3 class="heading">Tailored Programme</h3>
               <p>We bring a programme tailored to match the needs and wants to each individual school.</p>
@@ -226,7 +226,7 @@
         </div>
         <div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="100">
           <div class="media block-6">
-            <div class="icon"><span class="flaticon-career bg-after"></span></div>
+            <div class="icon"><span class="flaticon-passion-heart bg-after"></span></div>
             <div class="media-body">
               <h3 class="heading">Passionate Team</h3>
               <p>The WellBean team is extremely passionate about increasing mental health literacy.</p>
@@ -235,7 +235,7 @@
         </div>
         <div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="200">
           <div class="media block-6">
-            <div class="icon"><span class="flaticon-lightbulb bg-after"></span></div>
+            <div class="icon"><span class="flaticon-bag bg-after"></span></div>
             <div class="media-body">
               <h3 class="heading">Professionals Approved</h3>
               <p>All parts of our programme has undergone rigorous checks by mental health professionals.</p>
@@ -245,23 +245,23 @@
 
         <div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="300">
           <div class="media block-6">
-            <div class="icon"><span class="flaticon-pie-chart bg-after"></span></div>
+            <div class="icon"><span class="flaticon-growth-1 bg-after"></span></div>
             <div class="media-body">
               <h3 class="heading">Better Prepared</h3>
               <p>This programme will better equip your students to have a smooth transition into high school.</p>
             </div>
           </div>
         </div>
-        <!--<div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="400">
+        <div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="400">
           <div class="media block-6">
-            <div class="icon"><span class="flaticon-handshake bg-after"></span></div>
+            <div class="icon"><span class="flaticon-calendar bg-after"></span></div>
             <div class="media-body">
-              <h3 class="heading">[INSERT OTHER STUFF]</h3>
-              <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
+              <h3 class="heading">Flexible Times</h3>
+              <p>We are relatively flexible with times and can work to fit our programme into your school's schedule.</p>
             </div>
           </div>
         </div>
-        <div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="500">
+        <!--<div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="500">
           <div class="media block-6">
             <div class="icon"><span class="flaticon-presentation bg-after"></span></div>
             <div class="media-body">
@@ -333,27 +333,27 @@
           <div class="row">
             <div class="col-md">
               <div class="ftco-footer-widget mb-4">
-                <h2 class="ftco-heading-2">The Restaurant</h2>
+                <h2 class="ftco-heading-2">WellBean</h2>
                 <ul class="list-unstyled">
-                  <li><a href="#" class="py-2 d-block">About Us</a></li>
-                  <li><a href="#" class="py-2 d-block">Chefs</a></li>
-                  <li><a href="#" class="py-2 d-block">Events</a></li>
-                  <li><a href="#" class="py-2 d-block">Contact</a></li>
+                  <li><a href="services.html" class="py-2 d-block">What We Do</a></li>
+                  <li><a href="about.html" class="py-2 d-block">Who We Are</a></li>
+                  <li><a href="faq.html" class="py-2 d-block">FAQ</a></li>
+                  <li><a href="contact.html" class="py-2 d-block">Contact</a></li>
                 </ul>
               </div>
             </div>
             <div class="col-md">
                <div class="ftco-footer-widget mb-4">
-                <h2 class="ftco-heading-2">Communities</h2>
+                <h2 class="ftco-heading-2">Mental Health Services</h2>
                 <ul class="list-unstyled">
-                  <li><a href="#" class="py-2 d-block">Support</a></li>
-                  <li><a href="#" class="py-2 d-block">Sharing is Caring</a></li>
-                  <li><a href="#" class="py-2 d-block">Better Web</a></li>
-                  <li><a href="#" class="py-2 d-block">Good Template</a></li>
+                  <li><a href="https://kidshelpline.com.au/" class="py-2 d-block">Kids Helpline 1800 55 1800</a></li>
+                  <li><a href="http://lifeline.org.au/" class="py-2 d-block">Lifeline 13 11 14</a></li>
+                  <li><a href="https://headspace.org.au/eheadspace/" class="py-2 d-block">headspace 1800 650 890</a></li>
+                  <li><a href="https://www.sane.org/" class="py-2 d-block">SANE Australia 1800 18 7263</a></li>
                 </ul>
               </div>
             </div>
-            <div class="col-md">
+            <!--<div class="col-md">
                <div class="ftco-footer-widget mb-4">
                 <h2 class="ftco-heading-2">Useful links</h2>
                 <ul class="list-unstyled">
@@ -363,7 +363,7 @@
                   <li><a href="#" class="py-2 d-block">Sass</a></li>
                 </ul>
               </div>
-            </div>
+            </div>-->
           </div>
         </div>
         <div class="col-md-4">
@@ -382,6 +382,7 @@
           <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank" class="text-primary">Colorlib</a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
+          <p>WellBean acknowledges the Aboriginal and Torres Strait Islander peoples as traditional custodians of the land on which we operate. We pay respect to Elders past, present and emerging, and value the rich history, unbroken culture and ongoing connection of Aboriginal and Torres Strait Islander people to country.</p>
         </div>
       </div>
     </div>
