--- a/index.html
+++ b/index.html
@@ -82,10 +82,9 @@
           <div class="text col-md-6 col-lg-7 d-flex">
             <div class="text-inner align-self-center" data-aos="fade-up">
 
-              <h3>Far far away, behind the word mountains</h3>
-              <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-
-              <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+              <h3>What is WellBean?</h3>
+              <p>WellBean is a programme that seeks to equip the young people of today with the knowledge and skills to not only assess their own wellbeing, but also the ability to help support and foster a supportive community envrionment.</p>
+              <p>We believe the best way to do this is to work with young students prior to entering high school through a 4 week programme filled with fun and interactive activities. The key pillars of our program are around <strong>building relationships</strong>, <strong>overcoming difficulties</strong>, <strong>self esteem</strong> and <strong>expressing feelings</strong>.</p>
             </div>
           </div>
         </div>
