--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div class="row align-items-center ftco-vh-100">
           <div class="col-md-7">
             <h1 class="ftco-heading mb-3" data-aos="fade-up" data-aos-delay="500">Help us improve the wellbeing of your students.</h1>
-            <h2 class="h5 ftco-subheading mb-5" data-aos="fade-up"  data-aos-delay="600"><strong>WellBean</strong> is a service which brings wellbeing and transition workshops to Year 6 students, equipping the youth of today with the necessary knowledge and skills to make the most out of high school and beyond.</h2>
+            <h2 class="h5 ftco-subheading mb-5" data-aos="fade-up"  data-aos-delay="600"><strong>WellBean</strong> is a service which <!--brings wellbeing and transition workshops to Year 6 students,--> seeks to equip the youth of today with the necessary knowledge and skills to make the most out of high school and beyond.</h2>
             <p data-aos="fade-up"  data-aos-delay="700"><a href="contact.html" target="_blank" class="btn btn-outline-white px-4 py-3" data-target="#reservationModal">Get in touch with us!</a></p>
           </div>
         </div>
