--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
     <link rel="stylesheet" href="css/flaticon.css">
     <link rel="stylesheet" href="css/icomoon.css">
     <link rel="stylesheet" href="css/style.css">
+
+    <meta name="google-site-verification" content="L4EvDWCOy9DsLAySJ-I8EO4yye9-0POpLHkKy5KsTls" />
   </head>
   <body>
 
