Update Before Catchup

--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
             <li class="nav-item"><a href="services.html" class="nav-link">What We Do</a></li>
             <!--<li class="nav-item"><a href="blog.html" class="nav-link">The Journal</a></li>-->
             <li class="nav-item"><a href="about.html" class="nav-link">Who We Are</a></li>
-            <li class="nav-item"><a href="faw.html" class="nav-link">FAQ</a></li>
+            <li class="nav-item"><a href="faq.html" class="nav-link">FAQ</a></li>
             <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
           </ul>
         </div>
@@ -68,16 +68,16 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-md-7 text-center mb-5 pb-5">
-            <h2>Our Gallery</h2>
+            <h2>Our Team</h2>
           </div>
         </div>
       </div>
       <div class="container-fluid block-4">
         <div class="nonloop owl-carousel">
           <div class="item">
-            <img src="images/image_4.jpg" alt="Image placeholder">
+            <img src="images/team.jpg" alt="Image placeholder">
           </div>
-          <div class="item">
+          <!--<div class="item">
             <img src="images/image_8.jpg" alt="Image placeholder">
           </div>
           <div class="item">
@@ -109,7 +109,7 @@
           </div>
           <div class="item">
             <img src="images/image_10.jpg" alt="Image placeholder">
-          </div>
+          </div>-->
         </div>
       </div>
     </div>
@@ -126,63 +126,69 @@
           <div class="col-md-6 col-lg-4">
             <div class="block-10">
               <div class="person-info">
-                <span class="name">Myla Smith</span>
-                <span class="position">CEO, Founder</span>
+                <span class="name">Annaliese Campbell</span>
+                <span class="position">Title?</span>
               </div>
-              <img src="images/person_1.jpg" alt="" class="img-fluid">
+              <img src="images/person_Annaliese.jpg" alt="" class="img-fluid">
+              <div class="person-info">
+                <span class="position">Short Bio</span>
+              </div>
             </div>
           </div>
           <div class="col-md-6 col-lg-4">
             <div class="block-10">
               <div class="person-info">
-                <span class="name">Ceilla Gordon</span>
-                <span class="position">CEO, Founder</span>
+                <span class="name">Eden Griffiths</span>
+                <span class="position">Title?</span>
               </div>
               <img src="images/person_2.jpg" alt="" class="img-fluid">
-            </div>
+              <div class="person-info">
+                <span class="position">Short Bio</span>
+              </div>
+			  </div>
           </div>
           <div class="col-md-6 col-lg-4">
             <div class="block-10">
               <div class="person-info">
-                <span class="name">Carl Benson</span>
-                <span class="position">Business Strategist</span>
+                <span class="name">James Liang </span>
+                <span class="position">Title?</span>
               </div>
-              <img src="images/person_3.jpg" alt="" class="img-fluid">
+              <img src="images/person_James.jpg" alt="" class="img-fluid">
+              <div class="person-info">
+                <span class="position">Short Bio</span>
+              </div>			
             </div>
           </div>
 
           <div class="col-md-6 col-lg-4">
             <div class="block-10">
               <div class="person-info">
-                <span class="name">Myla Smith</span>
-                <span class="position">CEO, Founder</span>
+                <span class="name">Lauren Blackman </span>
+                <span class="position">Title?</span>
               </div>
               <img src="images/person_1.jpg" alt="" class="img-fluid">
+              <div class="person-info">
+                <span class="position">Short Bio</span>
+              </div>
             </div>
           </div>
           <div class="col-md-6 col-lg-4">
             <div class="block-10">
               <div class="person-info">
-                <span class="name">Ceilla Gordon</span>
-                <span class="position">CEO, Founder</span>
+                <span class="name">Mark Ziegelaar</span>
+                <span class="position">Title?</span>
               </div>
-              <img src="images/person_2.jpg" alt="" class="img-fluid">
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4">
-            <div class="block-10">
+              <img src="images/person_Mark.jpg" alt="" class="img-fluid">
               <div class="person-info">
-                <span class="name">Carl Benson</span>
-                <span class="position">Business Strategist</span>
+                <span class="position">Short Bio</span>
               </div>
-              <img src="images/person_3.jpg" alt="" class="img-fluid">
             </div>
-          </div>
+			</div>
         </div>
       </div>
     </div>
 
-    <div class="ftco-section bg-light">
+    <!--<div class="ftco-section bg-light">
     <div class="container">
       <div class="row justify-content-center mb-5 pb-5">
         <div class="col-md-7 text-center" data-aos="fade-up">
@@ -249,7 +255,7 @@
 
       </div>
     </div>
-  </div>
+  </div>-->
   
 
   
