--- a/blog-single.html
+++ b/blog-single.html
@@ -42,7 +42,7 @@
             <li class="nav-item"><a href="services.html" class="nav-link">What We Do</a></li>
             <!--<li class="nav-item"><a href="blog.html" class="nav-link">The Journal</a></li>-->
             <li class="nav-item"><a href="about.html" class="nav-link">Who We Are</a></li>
-            <li class="nav-item"><a href="faw.html" class="nav-link">FAQ</a></li>
+            <li class="nav-item"><a href="faq.html" class="nav-link">FAQ</a></li>
             <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
           </ul>
         </div>
