--- a/faq.html
+++ b/faq.html
@@ -42,7 +42,7 @@
             <li class="nav-item"><a href="services.html" class="nav-link">What We Do</a></li>
             <!--<li class="nav-item"><a href="blog.html" class="nav-link">The Journal</a></li>-->
             <li class="nav-item"><a href="about.html" class="nav-link">Who We Are</a></li>
-            <li class="nav-item"><a href="faw.html" class="nav-link">FAQ</a></li>
+            <li class="nav-item"><a href="faq.html" class="nav-link">FAQ</a></li>
             <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
           </ul>
         </div>
@@ -71,7 +71,7 @@
         <div class="col-md-6 col-lg-4">
           <div class="block-7">
             <div class="text-center">
-            <h2 class="heading">Free</h2>
+            <!--<h2 class="heading">Free</h2>
             <span class="price"><sup>$</sup> <span class="number">0</span></span>
             <span class="excerpt d-block">100% free. Forever</span>
             <a href="#" class="btn btn-primary d-block px-3 py-3 mb-4">Get Started</a>
@@ -120,7 +120,7 @@
               <li><strong>450 GB</strong> Bandwidth</li>
               <li><strong>400 GB</strong> Storage</li>
               <li><strong>$20.00 / GB</strong> Overages</li>
-              <li>All features</li>
+              <li>All features</li>-->
             </ul>
             </div>
           </div>
